public/styles/common.css
body {
	font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
	font-size: 10pt;
	color: white;
	background-color: #333;
	padding: 0;
	margin: 15pt;
}

a { color: white; }

.error { color: #f42; }


/******************************************************************************/
/* HEADER                                                                     */
/******************************************************************************/

header {
	background-color: #E0D8D0;
	background-image: -webkit-linear-gradient(top, #fff, #B0A8A0);
	background-image:    -moz-linear-gradient(top, #fff, #E0D8D0);
	background-image:     -ms-linear-gradient(top, #fff, #B0A8A0);
	background-image:      -o-linear-gradient(top, #fff, #B0A8A0);
	color: black;
	margin: -15pt;
	margin-bottom: 15pt;
	height: 48pt;
	box-shadow: 0px 0px 20px #000;
}

header h1 {
	font-weight: normal;
	padding: 7.5pt 15pt;
}

header .loginArea {
	position: absolute;
	width: 200pt;
	top: 0;
	right: 15pt;
	text-align: right;
}

header .loginArea input { width: 100%; }

header a { color: #000; }

header table { width: 100%; }

header td { padding-left: 5pt; }

/******************************************************************************/
/* FOOTER                                                                     */
/******************************************************************************/

footer {
	text-align: center;
	margin-top: 15pt;
	color: #ddd;
}

footer a { color: #eee; }
footer a:hover { color: #fff; }

/******************************************************************************/
/* NAVIGATION                                                                 */
/******************************************************************************/

nav ul {
	margin: 0;
	padding: 0;
	line-height: 22pt;
}

nav li {
	line-height: 15pt;
	margin: 0;
	padding: 1pt 7pt;
	display: inline-block;

	background-color: #456;
	border: 1px solid #567;
	box-shadow: 0px 0px 20px #222;
}

nav a { text-decoration: none; }
nav a:hover { text-decoration: underline; }
nav a:before { content: "◀ ";}
nav { margin-bottom: 15pt; }

#searchbox {
	position: absolute;
	width: 250pt;
	right: 15pt;
	top: 63pt;
}

#searchbox input { width: auto; }
#searchbox button { width: auto; }

/******************************************************************************/
/* CONTENTS                                                                   */
/******************************************************************************/

.skeleton h1 {
	font-weight: normal;
	padding: 3.75pt 15pt;
}

a.title {
	font-size: 12pt;
}

#content .inactive td {
	color: #eaa;
}

#content table {
	width: 100%;
	border-spacing: 0;
	border-collapse: collapse;
	box-shadow: 0px 0px 20px #000;
}

#content col.caption {
	width: 150pt;
}

#content th {
	text-align: left;
	background-color: #666;
	background-image: -webkit-linear-gradient(top, #666, #333);
	background-image:    -moz-linear-gradient(top, #666, #333);
	background-image:     -ms-linear-gradient(top, #666, #333);
	background-image:      -o-linear-gradient(top, #666, #333);
	border-bottom: 1px solid #222;
}

#content td {
	padding: 7.5pt;
	background-color: #eae8dd;
	border-bottom: 1px solid gray;
	color: black;
}

#content td a {
	color: black;
}

#content td.odd {
	background-color: #eee;
}

#content td.even {
	background-color: #ddd;
}

blockquote {
	display: block;
	border-left: 2px solid gray;
	padding-left: 7.5pt;
	margin-left: 0;
}

input.checkbox { width: auto; }

.link-button {
	display: block;
	margin-top: 7.5pt;
	max-width: 100pt;
	padding: 1pt 3.75pt;
	background-color: #ccc;
	background-image:      -o-linear-gradient(top, #eee, #bbb);
	background-image:    -moz-linear-gradient(top, #eee, #bbb);
	background-image: -webkit-linear-gradient(top, #eee, #bbb);
	border: 1px solid #555;
	border-radius: 3pt;
	text-align: center;
	text-decoration: none;
	color: black;
	clear: both;
}

.post {
	margin-bottom: 15pt;
	background-color: #eae8dd;
	/*border: 1px solid #;*/
	color: black;
	box-shadow: 0px 0px 20px #000;
}

.post a { color: black; }

/* clearfix */
.post:after {
	content: ".";
	display: block;
	clear: both;
	visibility: hidden;
	line-height: 0;
	height: 0;
}


.post .post-header {
	background-color: #666;
	background-image: -webkit-linear-gradient(top, #666, #333);
	background-image:    -moz-linear-gradient(top, #666, #333);
	background-image:     -ms-linear-gradient(top, #666, #333);
	background-image:      -o-linear-gradient(top, #666, #333);
	border-bottom: 1px solid #222;
	color: white;
	min-height: 20pt;
	padding: 5pt 15pt;
	padding-bottom: 0pt;
}

.post h2.skeleton {
	margin: 0;
	padding: 0;
	font-size: 12pt;
	font-weight: normal;
	float: left;
}

.post .permalink { color: #aaa; text-align: right; padding: 0; }
.post .permalink a { color: #aaa; }

.post-info {
	width: 180pt;
	float: left;
	padding: 15pt;
}

.post-info img {
	border: 1px solid black;
}

.post-info .posting-info { color: #555; }
.post-info .posting-info a { color: #555; }

.post-content {
	margin: 0;
	margin-left: 210pt;
	padding: 15pt;
	background-color: white;
	border-left: 1px solid #877;
}

.post-content pre {
	margin: 7.5;
}

.post-content div {
  max-width: 60em;
}

.secondary, .secondary a {
	color: #888;
}

input, textarea {
	width: 100%;
}

#message-preview {
	border: 1px solid #aaa;
	background-color: white;
	overflow: auto;
}

/*************/
.post-body { display: table-row; }
.post-info, .post-content { display: table-cell; vertical-align: top; }
.post-content { margin: 0; width: 100%; }


td form { display: inline-block; }
#content th.spam { width: 32pt; }
#content td.spam { background-color: #e52; }
#content td.ham { background-color: #8d4; }
#content td.undecided { background-color: #999; }


@media (max-width: 580pt) {
	.post-body { display: block; }
	.post-info, .post-content { display: block; }
	.post-content { margin: 0; width: auto; }

	.post-info {
		float: none;
		width: auto;
	}

	.post-info .avatar {
		float: left;
		margin-right: 15pt;
	}
	/* clearfix */
	.post-info:after {
		content: ".";
		display: block;
		clear: both;
		visibility: hidden;
		line-height: 0;
		height: 0;
	}

	.post-info .avatar img {
		max-width: 96px;
	}

	.post-info .reply-link {
		display: inline-block;
		width: 100pt;
		clear: none;
	}

	.post-content {
		float: none;
		margin-left: 0;
		border-left: none;
		border-top: 1px solid #877;
	}

	table .num-topics { display: none; }
	table .num-posts { display: none; }
}

@media (max-width: 400pt) {
	#searchbox { display: none; }

	.post-info .avatar img {
		max-width: 64px;
	}

	.post-info .reply-link {
		display: block;
		clear: both;
	}

	table .last-post { display: none; }

	.post h2.skeleton { float: none; }
	.post .permalink { text-align: left; }
}

